--- a/index.html
+++ b/index.html
@@ -82,7 +82,18 @@
       data-key="76"
       src="src/01 - JavaScript Drum Kit_sounds_tink.wav"
     ></audio>
-
+    <footer>
+      Built by
+      <a
+        href="https://www.linkedin.com/in/dani-reimer-07180a188/"
+        target="_blank"
+        >Dani Reimer</a
+      >
+      as part of the
+      <a href="https://javascript30.com" target="_blank"
+        >30 Day Vanilla JS Coding Challenge</a
+      >
+    </footer>
     <script src="src/script.js"></script>
   </body>
 </html>
